<resources>
    <string name="app_name">The Chase!</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Random User</string>
    <string name="nav_header_subtitle">Welcome to The Chase!</string>
    <string name="menu_goodbye">Goodbye!</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_map">Map</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_photos">Photos</string>
    <string name="dont_leave">No, don\'t leave!</string>
    <string name="photo_upload_success">Photo successfully saved!</string>
    <string name="photo_upload_failure">Error saving photo.</string>
    <string name="photo_take_ok">Take photo</string>
    <string name="photo_take_cancel">Cancel</string>
    <string name="photo_take_title">Congratulations!</string>
    <string name="photo_take_description">You have arrived to a new location. Would you like to take a photo?</string>
    <string name="Bronze">Bronze</string>
    <string name="Silver">Silver</string>
    <string name="Gold">Gold</string>
    <string name="recreation_center">Let\'s go get fit!</string>
    <string name="frother">Thursday mono?</string>
    <string name="central_library">Tallest building at UC?</string>
    <string name="eps_library">Has the most STEM books!</string>
    <string name="macmillan_brown_library">Find the cultural heritage collections.</string>
    <string name="the_book_shop">Let\'s purchase books and stationary!</string>
    <string name="meremere_building">Old Law and Commerce building?</string>
    <string name="erskine">Where do the tech geniuses live?</string>
    <string name="engineering_core">Most purple place on campus?</string>
    <string name="the_true_engineer">Gold achievements: EPS, Erskine and core.</string>
    <string name="the_shilling_club">Classy beverage in the undercroft?</string>
    <string name="the_true_breather">Achievements: Shilling club and Foundry.</string>


</resources>
