<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map"
                android:title="@string/menu_map"/>

        <item
                android:id="@+id/nav_achievements"
                android:icon="@drawable/ic_achievements"
                android:title="@string/menu_achievements"/>

        <item
                android:id="@+id/nav_photos"
                android:icon="@drawable/ic_photos"
                android:title="@string/menu_photos"/>

    </group>

    <item android:title="@string/menu_goodbye">
        <menu>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/menu_logout"/>

        </menu>
    </item>

</menu>
